CORS for rest service, allow foreign args in arglist